[gd_scene load_steps=6 format=3 uid="uid://dio1yrjtiu67"]

[ext_resource type="Script" uid="uid://cetlwbelt5u36" path="res://src/scripts/Panels/central_stats_panel.gd" id="1_1x76c"]
[ext_resource type="Texture2D" uid="uid://dlfbvdcwk6dr2" path="res://icon.svg" id="2_liohg"]
[ext_resource type="Texture2D" uid="uid://d1uicvdj2ugdb" path="res://assets/graphics/CentralPanel.png" id="2_m6dgc"]
[ext_resource type="Shader" uid="uid://cn65vgwd8wjfu" path="res://src/scripts/CRTShader.gdshader" id="4_ve6vp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lvy6k"]
shader = ExtResource("4_ve6vp")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.194
shader_parameter/scanlines_width = 0.162
shader_parameter/grille_opacity = 0.0
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 1.0
shader_parameter/roll_size = 10.247
shader_parameter/roll_variation = 3.77
shader_parameter/distort_intensity = 0.05
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 0.01
shader_parameter/brightness = 1.4
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.0
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.2
shader_parameter/vignette_opacity = 0.263

[node name="CentralHubPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1x76c")

[node name="ColorRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_m6dgc")

[node name="ElapsedTime" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 461.0
offset_top = 19.0
offset_right = 509.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 12
text = "00:00:00"

[node name="ElapsedTimeLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 373.0
offset_top = 18.0
offset_right = 453.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 12
text = "Elapsed Time:"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -312.0
offset_top = 3.0
offset_right = 270.0
offset_bottom = 44.0
grow_horizontal = 2
theme_override_constants/separation = 150
alignment = 1

[node name="MiningPaneNavigation" type="Button" parent="ColorRect/HBoxContainer"]
layout_mode = 2
text = "Mining Area"

[node name="StartFight" type="Button" parent="ColorRect/HBoxContainer"]
layout_mode = 2
text = "Fight Boss"

[node name="ShopPaneNavigation" type="Button" parent="ColorRect/HBoxContainer"]
layout_mode = 2
text = "Shop
"

[node name="ResourcesPanel" type="Panel" parent="ColorRect"]
layout_mode = 0
offset_left = 18.0
offset_top = 54.0
offset_right = 132.0
offset_bottom = 79.0

[node name="RawFerriteLabel" type="Label" parent="ColorRect/ResourcesPanel"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 75.0
offset_bottom = 22.0
theme_override_font_sizes/font_size = 12
text = "Raw Ferrite:"

[node name="RawFerriteCount" type="Label" parent="ColorRect/ResourcesPanel"]
layout_mode = 0
offset_left = 82.0
offset_top = 5.0
offset_right = 310.0
offset_bottom = 22.0
theme_override_font_sizes/font_size = 12
text = "100"

[node name="FerriteBarsLabel" type="Label" parent="ColorRect/ResourcesPanel"]
layout_mode = 0
offset_left = 5.0
offset_top = 26.0
offset_right = 76.0
offset_bottom = 43.0
theme_override_font_sizes/font_size = 12
text = "Ferrite Bars:"

[node name="FerriteBarsCount" type="Label" parent="ColorRect/ResourcesPanel"]
layout_mode = 0
offset_left = 85.0
offset_top = 28.0
offset_right = 313.0
offset_bottom = 45.0
theme_override_font_sizes/font_size = 12
text = "100"

[node name="PlatinumBarsLabel" type="Label" parent="ColorRect/ResourcesPanel"]
layout_mode = 0
offset_left = 5.0
offset_top = 48.0
offset_right = 76.0
offset_bottom = 65.0
theme_override_font_sizes/font_size = 12
text = "Platinum:"

[node name="PlatinumBarsCount" type="Label" parent="ColorRect/ResourcesPanel"]
layout_mode = 0
offset_left = 85.0
offset_top = 49.0
offset_right = 313.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 12
text = "100"

[node name="PlasmaLabel" type="Label" parent="ColorRect/ResourcesPanel"]
layout_mode = 0
offset_left = 6.0
offset_top = 70.0
offset_right = 77.0
offset_bottom = 87.0
theme_override_font_sizes/font_size = 12
text = "Plasma:"

[node name="PlasmaCount" type="Label" parent="ColorRect/ResourcesPanel"]
layout_mode = 0
offset_left = 6.0
offset_top = 90.0
offset_right = 61.0
offset_bottom = 107.0
theme_override_font_sizes/font_size = 12
text = "100"

[node name="TipsPanel" type="Panel" parent="ColorRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 229.0
offset_right = 297.0
offset_bottom = 326.0

[node name="ResourcesLabel2" type="Label" parent="ColorRect/TipsPanel"]
layout_mode = 0
offset_left = 4.0
offset_top = 7.0
offset_right = 97.0
offset_bottom = 24.0
theme_override_font_sizes/font_size = 12
text = "Reconnaissance"

[node name="PurchaseReconScout" type="Button" parent="ColorRect/TipsPanel"]
layout_mode = 0
offset_left = 191.0
offset_top = -26.0
offset_right = 271.0
offset_bottom = -5.0
theme_override_font_sizes/font_size = 9
text = "Buy Recon Scout"

[node name="Platinum" type="Label" parent="ColorRect/TipsPanel"]
layout_mode = 0
offset_left = 142.0
offset_top = -26.0
offset_right = 180.0
offset_bottom = -14.0
theme_override_font_sizes/font_size = 8
text = "Platinum"

[node name="PlatinumCost" type="Label" parent="ColorRect/TipsPanel"]
layout_mode = 0
offset_left = 141.0
offset_top = -16.0
offset_right = 160.0
offset_bottom = -4.0
theme_override_font_sizes/font_size = 8
text = "8000"

[node name="ReconText" type="RichTextLabel" parent="ColorRect/TipsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.5
offset_top = -19.5
offset_right = 132.5
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 11
text = "Hire a Recon Scout to get some information on your opponent..."

[node name="MechComponentsTrackerPanel" type="Panel" parent="ColorRect"]
layout_mode = 0
offset_left = 399.0
offset_top = 48.0
offset_right = 592.0
offset_bottom = 242.0

[node name="Label" type="Label" parent="ColorRect/MechComponentsTrackerPanel"]
layout_mode = 0
offset_left = 7.0
offset_top = 5.0
offset_right = 128.0
offset_bottom = 22.0
theme_override_font_sizes/font_size = 12
text = "Components Tracker"

[node name="TextureRect" type="TextureRect" parent="ColorRect/MechComponentsTrackerPanel"]
layout_mode = 0
offset_left = 35.0
offset_top = 39.0
offset_right = 163.0
offset_bottom = 167.0
texture = ExtResource("2_liohg")

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
material = SubResource("ShaderMaterial_lvy6k")
layout_mode = 0
offset_left = 400.0
offset_top = 46.0
offset_right = 592.0
offset_bottom = 243.0

[node name="NameEntryBox" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.5
offset_top = -44.5
offset_right = 71.5
offset_bottom = 44.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.422314, 0.504722, 0.704522, 1)

[node name="LineEdit" type="LineEdit" parent="NameEntryBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -12.5
offset_right = 66.0
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
placeholder_text = "RAVEN562A"
max_length = 20

[node name="Label" type="Label" parent="NameEntryBox"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.5
offset_top = 4.0
offset_right = 65.5
offset_bottom = 27.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 15
text = "Enter Mech Name"

[node name="ConfirmStartFight" type="Button" parent="NameEntryBox"]
layout_mode = 0
offset_left = 51.0
offset_top = 61.0
offset_right = 92.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 11
text = "START"

[connection signal="button_up" from="ColorRect/HBoxContainer/MiningPaneNavigation" to="." method="_on_mining_pane_navigation_button_up"]
[connection signal="button_up" from="ColorRect/HBoxContainer/StartFight" to="." method="_on_start_fight_button_up"]
[connection signal="button_up" from="ColorRect/HBoxContainer/ShopPaneNavigation" to="." method="_on_shop_pane_navigation_button_up"]
[connection signal="button_down" from="ColorRect/TipsPanel/PurchaseReconScout" to="." method="_on_purchase_recon_scout_button_down"]
[connection signal="button_down" from="NameEntryBox/ConfirmStartFight" to="." method="_on_confirm_start_fight_button_down"]
